--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ figure {
   width: 300px;
   position: fixed;
   z-index: 1001;
-  background-color: #f9bf3f;
+  background-color: #080c134b;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s; }
@@ -129,7 +129,7 @@ figure {
       -o-transform: translateX(-300px);
       transform: translateX(-300px);
       padding-top: 4em;
-	  background-color: #f9bf3f;
+	  background-color: #3ff958;
         height: auto;
       } }
   #colorlib-aside .author-img {
@@ -666,7 +666,7 @@ font-family: "Montserrat", Georgia, serif;}
   position: absolute;
   display: block;
   width: 4px;
-  background: #f9bf3f;
+  background: #00dbfd77;
   top: 20px;
   bottom: 20px;
   margin-left: 29px; }
