--- a/css/style.css
+++ b/css/style.css
@@ -522,7 +522,7 @@ font-family: "Montserrat", Georgia, serif;}
 
 .hire {
   padding: 2em;
-  background: #f9bf3f; }
+  background: #3e3e3f5d; }
   .hire h2 {
     line-height: 1.5; }
   .hire .btn-hire {
@@ -686,7 +686,7 @@ font-family: "Montserrat", Georgia, serif;}
   display: block;
   width: 40px;
   height: 40px;
-  background: #2c98f0;
+  background: #232425;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
@@ -715,7 +715,7 @@ font-family: "Montserrat", Georgia, serif;}
 
 .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label {
   position: relative;
-  background: #f9bf3f;
+  background: #18b7df38;
   padding: 1.5em;
   margin-left: 60px;
   -webkit-background-clip: padding-box;
