--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 *
 * ======================================================= */
 body {
+  
   font-family: "Quicksand", Arial, sans-serif;
   font-weight: 400;
   font-size: 15px;
@@ -23,14 +24,10 @@ body {
       h2{
           text-align: center;
       }
+}
 canvas {
-  background: #EEE;
-  position: fixed;
-  top: 0;
-  left: 0;
-}}
-canvas {
-  background: #EEE;
+  background-image: url("images/background.jpg");
+  background-color: #00000000;
   position: fixed;
   top: 0;
   left: 0;
@@ -184,7 +181,7 @@ figure {
         text-transform: uppercase;
         letter-spacing: 1px; }
         #colorlib-aside #colorlib-main-menu ul li a {
-          color: rgba(0, 0, 0, 0.7);
+          color: rgba(255, 255, 255, 0.7);
           text-decoration: none;
           position: relative;
           padding: 10px 0;
@@ -213,7 +210,7 @@ figure {
             transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
           #colorlib-aside #colorlib-main-menu ul li a:hover {
             text-decoration: none;
-            color: black; }
+            color: rgb(255, 255, 255); }
             #colorlib-aside #colorlib-main-menu ul li a:hover:after {
               visibility: visible;
               -webkit-transform: scaleX(1);
@@ -522,13 +519,26 @@ font-family: "Montserrat", Georgia, serif;}
 
 .hire {
   padding: 2em;
-  background: #3e3e3f5d; }
+  background: #14181a41; }
   .hire h2 {
     line-height: 1.5; }
   .hire .btn-hire {
-    color: #000;
+    color: rgba(0, 0, 0, 0.295);
     text-transform: uppercase;
-    letter-spacing: 1px;
+    letter-spacing: 3px;
+    bordeR: 1px solid #000;
+    padding: 2px 10px; }
+
+
+.hire1 {
+  padding: 2em;
+  background: #14181a41; }
+  .hire1 h2 {
+    line-height: 0.2; }
+    .hire1.btn-hire1 {
+    color: rgba(0, 0, 0, 0.219);
+    text-transform: uppercase;
+    letter-spacing: 3px;
     bordeR: 1px solid #000;
     padding: 2px 10px; }
 
@@ -666,7 +676,7 @@ font-family: "Montserrat", Georgia, serif;}
   position: absolute;
   display: block;
   width: 4px;
-  background: #00dbfd77;
+  background: #023d5f52;
   top: 20px;
   bottom: 20px;
   margin-left: 29px; }
@@ -686,7 +696,7 @@ font-family: "Montserrat", Georgia, serif;}
   display: block;
   width: 40px;
   height: 40px;
-  background: #232425;
+  background: #424c555e;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
@@ -715,7 +725,7 @@ font-family: "Montserrat", Georgia, serif;}
 
 .timeline-centered .timeline-entry .timeline-entry-inner .timeline-label {
   position: relative;
-  background: #18b7df38;
+  background: #42668f33;
   padding: 1.5em;
   margin-left: 60px;
   -webkit-background-clip: padding-box;
@@ -811,7 +821,7 @@ font-family: "Montserrat", Georgia, serif;}
     height: 50px;
     display: table;
     margin: 0 auto;
-    background: #2c98f0; }
+    background: #000000; }
     .services .icon:before, .services .icon:after {
       position: absolute;
       left: 0;
@@ -1499,7 +1509,7 @@ align-items: stretch;}
       content: '';
       width: 30px;
       height: 2px;
-      background: #000;
+      background: rgb(255, 255, 255);
       position: absolute;
       left: 0;
       -webkit-transition: 0.2s;
@@ -1508,12 +1518,12 @@ align-items: stretch;}
   .colorlib-nav-toggle.dark i {
     position: relative;
     color: #000;
-    background: #000;
+    background: rgb(255, 255, 255);
     -webkit-transition: all .2s ease-out;
     -o-transition: all .2s ease-out;
     transition: all .2s ease-out; }
     .colorlib-nav-toggle.dark i::before, .colorlib-nav-toggle.dark i::after {
-      background: #000;
+      background: rgb(255, 255, 255);
       -webkit-transition: 0.2s;
       -o-transition: 0.2s;
       transition: 0.2s; }
